--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -1,5 +1,9 @@
 name: PR Validation
 
+permissions:
+  contents: read
+  issues: write
+
 on:
   pull_request:
     branches:
@@ -35,6 +39,7 @@ jobs:
           flake8 app --count --select=E9,F63,F7,F82 --show-source --statistics
 
       - name: Configure AWS credentials
+        if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -42,10 +47,12 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Login to Amazon ECR
+        if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
       - name: Build Docker image
+        if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: pr-${{ github.event.pull_request.number }}
@@ -55,6 +62,7 @@ jobs:
         id: build-image
 
       - name: Test Docker image
+        if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: pr-${{ github.event.pull_request.number }}
@@ -71,28 +79,26 @@ jobs:
             -e LANGFUSE_BASE_URL=${{ secrets.LANGFUSE_BASE_URL }} \
             $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-          # Wait for container to be healthy
           echo "Waiting for container to start..."
-          sleep 10
-
-          # Check health endpoint
-          for i in {1..30}; do
+          sleep 15
+          for i in {1..45}; do
             if curl -f http://localhost:8000/health; then
               echo "✅ Health check passed"
-              docker logs test-container
-              docker stop test-container
+              docker logs test-container || true
+              docker stop test-container || true
               exit 0
             fi
-            echo "Attempt $i/30 failed, waiting..."
+            echo "Attempt $i/45 failed, waiting..."
             sleep 2
           done
 
           echo "❌ Health check failed"
-          docker logs test-container
-          docker stop test-container
+          docker logs test-container || true
+          docker stop test-container || true
           exit 1
 
       - name: Push to ECR (for testing)
+        if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: pr-${{ github.event.pull_request.number }}
@@ -101,6 +107,7 @@ jobs:
           echo "✅ Image pushed: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
       - name: Comment on PR
+        if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
         uses: actions/github-script@v7
         with:
           script: |
