--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -13,7 +13,9 @@ jobs:
   validate:
     name: Validate PR
     runs-on: ubuntu-latest
-
+    permissions:
+      issues: write
+      
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
