--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -14,6 +14,8 @@ jobs:
     name: Validate PR
     runs-on: ubuntu-latest
     permissions:
+      contents: read       
+      pull-requests: write
       issues: write
       
     steps:
